--- a/index.html
+++ b/index.html
@@ -400,15 +400,7 @@
         <input type="text" name="project" />
 
         <label>Position Applied for</label>
-        <select name="positionApplied" required>
-          <option value="">-- Select --</option>
-          <option>Software Engineer</option>
-          <option>Project Manager</option>
-          <option>HR Executive</option>
-          <option>Business Analyst</option>
-          <option>IT Support</option>
-          <option>Other</option>
-        </select>
+        <input type="text" name="officePositionApplied" />
 
         <label>Date</label>
         <input type="date" name="officeUseDate" />
