--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="progress-bar">
         <div class="progress" id="progress"></div>
       </div>
-      <form id="multiStepForm" onsubmit="return validateForm()">
+      <form id="multiStepForm">
         
         <div class="form-section">
           <h2>Personal Particulars</h2>
