--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <label>State of Birth</label>
         <input type="text" name="stateOfBirth" />
 <label>Marital Status</label>
-<select name="maritalStatus" onchange="toggleMarriedFields(this); toggleOtherField(this, 'maritalOtherDiv')">
+<select name="maritalStatus" onchange="toggleMarriedFields(this); toggleOtherField(this, 'maritalOtherDiv')" required>
   <option value="">-- Select --</option>
   <option>Single</option>
   <option>Married</option>
