--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <input type="number" name="age" />
         <label>State of Birth</label>
         <input type="text" name="stateOfBirth" />
-<label>Marital Status</label>
+<label>Marital Status *</label>
 <select name="maritalStatus" onchange="toggleMarriedFields(this); toggleOtherField(this, 'maritalOtherDiv')" required>
   <option value="">-- Select --</option>
   <option>Single</option>
