--- a/index.html
+++ b/index.html
@@ -19,12 +19,200 @@
           <label>Position Applied For *</label>
           <select name="positionApplied" onchange="toggleOtherField(this, 'positionOtherDiv1')" required>
             <option value="">-- Select Position --</option>
-            <option>Software Engineer</option>
-            <option>Project Manager</option>
-            <option>HR Executive</option>
-            <option>Business Analyst</option>
-            <option>IT Support</option>
-            <option>Other</option>
+         <option>Advisor Demand Planning</option>
+	<option>Advisor IT Service Operations</option>
+	<option>Advisor Project/Programme Management</option>
+	<option>Advisor, IT Infrastructure- DBA</option>
+	<option>Agile Project Manager</option>
+	<option>Alvm Specialist</option>
+	<option>Analyst Financial Analysis</option>
+	<option>Analyst IT Application Management</option>
+	<option>Analyst IT Technical Analysis</option>
+	<option>Analyst Sales Operations</option>
+	<option>Analyst, IT Technical Analysis</option>
+	<option>Application Security Analyst</option>
+	<option>Application Support Analyst</option>
+	<option>Application Support Specialist</option>
+	<option>Associate Director - Delivery</option>
+	<option>Associate Director - Strategic Accounts</option>
+	<option>Automation Test Analyst</option>
+	<option>Automation Tester</option>
+	<option>Backup Solution Architect</option>
+	<option>Business Analyst</option>
+	<option>Business Consulting Manager</option>
+	<option>Business Solution Manager</option>
+	<option>Campaign Strategist</option>
+	<option>Cisco ACI Engineer</option>
+	<option>Client Relation Manager</option>
+	<option>Cloud Engineer</option>
+	<option>Content Analyst</option>
+	<option>Content Review Analyst</option>
+	<option>Content Review Associate</option>
+	<option>Copyright Operations Associate</option>
+	<option>Customer Service L1</option>
+	<option>Cyber Security Analyst</option>
+	<option>Cyber Security Specialist</option>
+	<option>Data Modeler</option>
+	<option>Database Engineer</option>
+	<option>Datastage Developer</option>
+	<option>Delivery Lead</option>
+	<option>Developer</option>
+	<option>Development Analyst</option>
+	<option>Development Analyst - COBOL</option>
+	<option>Development Lead</option>
+	<option>Development Lead (HOGAN)</option>
+	<option>Development Manager</option>
+	<option>Director</option>
+	<option>Document Writer</option>
+	<option>Dotnet Developer</option>
+	<option>Emerging Technology Solution Manager</option>
+	<option>Enterprise Solution Lead-APAC</option>
+	<option>ETL Power Centre Developer</option>
+	<option>Field Engineer</option>
+	<option>Finance Controller</option>
+	<option>Finance Executive</option>
+	<option>Finance Executive Secretary</option>
+	<option>Finance Manager</option>
+	<option>Financial Analyst</option>
+	<option>Frontend Developer</option>
+	<option>Head-Presales APAC</option>
+	<option>HR Executive</option>
+	<option>HR Manager</option>
+	<option>IAM Specialist</option>
+	<option>Informatica Developer</option>
+	<option>Information Security Analyst</option>
+	<option>Information Security Manager</option>
+	<option>Information Security Specialist</option>
+	<option>Infra Tech Support Practitioner</option>
+	<option>Infrastructure Specialist</option>
+	<option>IT Application Management Specialist</option>
+	<option>IT Resilience Specialist</option>
+	<option>Java Developer</option>
+	<option>Jr. Consultant</option>
+	<option>Junior Project Manager</option>
+	<option>Junior Recruiter</option>
+	<option>Lead Business Analyst</option>
+	<option>Lead Developer</option>
+	<option>Lead Engineer- Quality Assurance</option>
+	<option>Lead Performance Tester</option>
+	<option>Lead Project Manager</option>
+	<option>Lead Tech Support</option>
+	<option>Linux Build Engineer</option>
+	<option>Magento Architect</option>
+	<option>Mainframe Developer</option>
+	<option>Manager - HR And L&D</option>
+	<option>Manager- Corporate Finance</option>
+	<option>Material Planning Analyst</option>
+	<option>Merchant Executive</option>
+	<option>Network Engineer</option>
+	<option>Network Engineer Specialist</option>
+	<option>Network Specialist</option>
+	<option>Operational Executive</option>
+	<option>Oracle BI Consultant</option>
+	<option>Other</option>
+	<option>PMO</option>
+	<option>PMO Analyst</option>
+	<option>Principal Software Engineer- IT</option>
+	<option>Principal Software Engineer- IT Malaysia</option>
+	<option>Product Lead</option>
+	<option>Product Operations Engineer 1</option>
+	<option>Product Operations Engineer 1 - Malaysia</option>
+	<option>Program Manager</option>
+	<option>Project Head- Incident Management</option>
+	<option>Project Manager</option>
+	<option>Quality Analyst</option>
+	<option>Recruitment & Employee Relation Manager</option>
+	<option>Recruitment Consultant</option>
+	<option>Regional Account Director</option>
+	<option>RPA Developer</option>
+	<option>SACM Specialist</option>
+	<option>Sales Manager</option>
+	<option>Salesforce Developer</option>
+	<option>SAP HANA Consultant</option>
+	<option>SAS Developer</option>
+	<option>Senior Advisor IT Infrastructure</option>
+	<option>Senior Advisor Technical Writer</option>
+	<option>Senior Agile Engineer</option>
+	<option>Senior Analyst</option>
+	<option>Senior Analyst Programmer</option>
+	<option>Senior Application Specialist</option>
+	<option>Senior Backend Developer</option>
+	<option>Senior Business Analyst</option>
+	<option>Senior Consultant - IT Security</option>
+	<option>Senior Database Administrator</option>
+	<option>Senior Developer</option>
+	<option>Senior Development Analyst</option>
+	<option>Senior Frontend Developer</option>
+	<option>Senior Hadoop Developer</option>
+	<option>Senior Java Developer</option>
+	<option>Senior Mainframe Developer</option>
+	<option>Senior Manager</option>
+	<option>Senior Manager- HR</option>
+	<option>Senior Oracle Database Administrator</option>
+	<option>Senior Pega Developer</option>
+	<option>Senior Programmer</option>
+	<option>Senior QA Engineer</option>
+	<option>Senior RPA Consultant</option>
+	<option>Senior Software Developer</option>
+	<option>Senior Software Engineer</option>
+	<option>Senior Software Engineer (Frontend)</option>
+	<option>Senior Software Engineer- IT</option>
+	<option>Senior Solution Architect</option>
+	<option>Senior Specialist, Product Offer Management</option>
+	<option>Senior System Administrator</option>
+	<option>Senior System Analyst</option>
+	<option>Senior Talent Acquisition Executive</option>
+	<option>Senior Technical Analyst</option>
+	<option>Senior Technical Architect</option>
+	<option>Senior Technical Consultant</option>
+	<option>Senior Technical Manager</option>
+	<option>Senior Test Engineer</option>
+	<option>Senior Web Methods Consultant</option>
+	<option>Software Developer</option>
+	<option>Software Engineer</option>
+	<option>Software Engineer – Front End</option>
+	<option>Software Engineer 2</option>
+	<option>Solution Support Specialist</option>
+	<option>Specialist IT Application Management</option>
+	<option>Specialist QA Tester</option>
+	<option>Specialist, Customer Service</option>
+	<option>Specialist, Customer Services</option>
+	<option>Specialist, IT Application Management- Malaysia</option>
+	<option>Specialist, IT Service Operations</option>
+	<option>SQL Developer</option>
+	<option>SR Lead Engineer</option>
+	<option>SR. Advisor IT Service Operations</option>
+	<option>SR. Analyst Project/ Programme Management</option>
+	<option>SR. Developer</option>
+	<option>SR. Full Stack Developer</option>
+	<option>SR. Java Developer</option>
+	<option>SR. Programme Manager</option>
+	<option>SR. SAS Developer</option>
+	<option>SR. Software Engineer</option>
+	<option>SR. Test Engineer</option>
+	<option>Storage Consultant</option>
+	<option>Storage Engineer</option>
+	<option>Store Lead</option>
+	<option>Support Analyst</option>
+	<option>System Analyst</option>
+	<option>Technical Analyst</option>
+	<option>Technical Architect</option>
+	<option>Technical Consultant</option>
+	<option>Technical Consultant-Recruitment</option>
+	<option>Technical Evaluation Consultant</option>
+	<option>Technical Lead</option>
+	<option>Technical Manager</option>
+	<option>Technical Operations Consultant</option>
+	<option>Technical Recruiter</option>
+	<option>Technical Specialist</option>
+	<option>Technical Specialist-Metadata</option>
+	<option>Test Engineer</option>
+	<option>Test Lead</option>
+	<option>Transaction Process Associate</option>
+	<option>UI/UX Developer</option>
+	<option>UiPath Developer</option>
+	<option>VM Ware Senior Engineer</option>
+	<option>Wintel Engineer</option>
           </select>
           <div id="positionOtherDiv1" style="display:none">
             <label>If Other, specify:</label>
@@ -43,9 +231,9 @@
 <label>Marital Status *</label>
 <select name="maritalStatus" onchange="toggleMarriedFields(this); toggleOtherField(this, 'maritalOtherDiv')" required>
   <option value="">-- Select --</option>
-  <option>Single</option>
-  <option>Married</option>
   <option>Divorced</option>
+  <option>Married</option>
+  <option>Single</option>
   <option>Widow/Widower</option>
 </select>
 <div id="marriedFields" style="display: none;">
@@ -70,9 +258,175 @@
           <label>Citizenship *</label>
           <select name="citizenship" id="citizenship" onchange="toggleCitizenshipFields()" required>
             <option value="">-- Select --</option>
-            <option>Malaysian</option>
-            <option>Singaporean</option>
-            <option>Other</option>
+            <option>Albania</option>
+	<option>Algeria</option>
+	<option>Andorra</option>
+	<option>Angola</option>
+	<option>Antigua and Barbuda</option>
+	<option>Argentina</option>
+	<option>Armenia</option>
+	<option>Australia</option>
+	<option>Austria</option>
+	<option>Azerbaijan</option>
+	<option>Bahamas</option>
+	<option>Bahrain</option>
+	<option>Bangladesh</option>
+	<option>Barbados</option>
+	<option>Belarus</option>
+	<option>Belgium</option>
+	<option>Belize</option>
+	<option>Benin</option>
+	<option>Bhutan</option>
+	<option>Bolivia</option>
+	<option>Bosnia and Herzegovina</option>
+	<option>Botswana</option>
+	<option>Brazil</option>
+	<option>Brunei</option>
+	<option>Bulgaria</option>
+	<option>Burkina Faso</option>
+	<option>Burundi</option>
+	<option>Cambodia</option>
+	<option>Cameroon</option>
+	<option>Canada</option>
+	<option>China</option>
+	<option>Colombia</option>
+	<option>Denmark</option>
+	<option>Egypt</option>
+	<option>Ethiopia</option>
+	<option>Fiji</option>
+	<option>Finland</option>
+	<option>France</option>
+	<option>Gabon</option>
+	<option>Gambia</option>
+	<option>Georgia</option>
+	<option>Germany</option>
+	<option>Ghana</option>
+	<option>Greece</option>
+	<option>Grenada</option>
+	<option>Guatemala</option>
+	<option>Guinea</option>
+	<option>Guinea-Bissau</option>
+	<option>Guyana</option>
+	<option>Haiti</option>
+	<option>Holy See</option>
+	<option>Honduras</option>
+	<option>Hungary</option>
+	<option>Iceland</option>
+	<option>India</option>
+	<option>Indonesia</option>
+	<option>Iran</option>
+	<option>Iraq</option>
+	<option>Ireland</option>
+	<option>Israel</option>
+	<option>Italy</option>
+	<option>Jamaica</option>
+	<option>Japan</option>
+	<option>Jordan</option>
+	<option>Kazakhstan</option>
+	<option>Kenya</option>
+	<option>Kiribati</option>
+	<option>Kuwait</option>
+	<option>Kyrgyzstan</option>
+	<option>Laos</option>
+	<option>Latvia</option>
+	<option>Lebanon</option>
+	<option>Lesotho</option>
+	<option>Liberia</option>
+	<option>Libya</option>
+	<option>Liechtenstein</option>
+	<option>Lithuania</option>
+	<option>Luxembourg</option>
+	<option>Madagascar</option>
+	<option>Malawi</option>
+	<option>Malaysia</option>
+	<option>Maldives</option>
+	<option>Mali</option>
+	<option>Malta</option>
+	<option>Marshall Islands</option>
+	<option>Mauritania</option>
+	<option>Mauritius</option>
+	<option>Mexico</option>
+	<option>Micronesia</option>
+	<option>Moldova</option>
+	<option>Monaco</option>
+	<option>Mongolia</option>
+	<option>Montenegro</option>
+	<option>Morocco</option>
+	<option>Mozambique</option>
+	<option>Myanmar</option>
+	<option>Namibia</option>
+	<option>Nauru</option>
+	<option>Nepal</option>
+	<option>Netherlands</option>
+	<option>New Zealand</option>
+	<option>Nicaragua</option>
+	<option>Niger</option>
+	<option>Nigeria</option>
+	<option>North Korea</option>
+	<option>North Macedonia</option>
+	<option>Norway</option>
+	<option>Oman</option>
+	<option>Pakistan</option>
+	<option>Palau</option>
+	<option>Palestine State</option>
+	<option>Panama</option>
+	<option>Papua New Guinea</option>
+	<option>Paraguay</option>
+	<option>Peru</option>
+	<option>Philippines</option>
+	<option>Poland</option>
+	<option>Portugal</option>
+	<option>Qatar</option>
+	<option>Romania</option>
+	<option>Russia</option>
+	<option>Rwanda</option>
+	<option>Saint Kitts and Nevis</option>
+	<option>Saint Lucia</option>
+	<option>Saint Vincent and the Grenadines</option>
+	<option>Samoa</option>
+	<option>San Marino</option>
+	<option>Sao Tome and Principe</option>
+	<option>Saudi Arabia</option>
+	<option>Senegal</option>
+	<option>Serbia</option>
+	<option>Seychelles</option>
+	<option>Sierra Leone</option>
+	<option>Singapore</option>
+	<option>Slovakia</option>
+	<option>Slovenia</option>
+	<option>Solomon Islands</option>
+	<option>Somalia</option>
+	<option>South Africa</option>
+	<option>South Korea</option>
+	<option>South Sudan</option>
+	<option>Spain</option>
+	<option>Sri Lanka</option>
+	<option>Sudan</option>
+	<option>Suriname</option>
+	<option>Sweden</option>
+	<option>Switzerland</option>
+	<option>Syria</option>
+	<option>Tajikistan</option>
+	<option>Tanzania</option>
+	<option>Thailand</option>
+	<option>Timor-Leste</option>
+	<option>Togo</option>
+	<option>Tonga</option>
+	<option>Trinidad and Tobago</option>
+	<option>Tunisia</option>
+	<option>Turkey</option>
+	<option>Turkmenistan</option>
+	<option>Tuvalu</option>
+	<option>Uganda</option>
+	<option>Ukraine</option>
+	<option>United Arab Emirates</option>
+	<option>United Kingdom</option>
+	<option>Uzbekistan</option>
+	<option>Vanuatu</option>
+	<option>Venezuela</option>
+	<option>Vietnam</option>
+	<option>Yemen</option>
+	<option>Zimbabwe</option>
           </select>
           <div id="citizenshipOtherDiv" style="display:none">
             <label>If Other, specify:</label>
@@ -137,9 +491,9 @@
         <label>Job Location</label>
         <select name="joblocation">
           <option value="">-- Select --</option>
-          <option>Kuala Lumpur</option>
           <option>Johor Bahru</option>
-	  <option>Penanag</option>
+          <option>Kuala Lumpur</option>
+	  <option>Penang</option>
 	  <option>Selangor</option>
         </select>
           <div class="button-row">
@@ -154,9 +508,19 @@
           <label>Bank Name *</label>
           <select name="bank" onchange="toggleOtherField(this, 'otherBankDiv')" required>
             <option value="">-- Select --</option>
-            <option>Maybank</option>
-            <option>CIMB</option>
-            <option>Other</option>
+            <option>Affin Bank</option>
+	<option>Ambank</option>
+	<option>Cimb Bank</option>
+	<option>Citi Bank</option>
+	<option>Hong Leong Bank</option>
+	<option>Hsbc Bank</option>
+	<option>May Bank</option>
+	<option>Ocbc Bank</option>
+	<option>Public Bank</option>
+	<option>Rhb Bank</option>
+	<option>Standard Chartered Bank</option>
+	<option>Uob Bank</option>
+	<option>Other</option>
           </select>
           <div id="otherBankDiv" style="display:none">
             <label>If Other, specify:</label>
@@ -282,9 +646,24 @@
             <label>Relationship *</label>
             <select name="familyRelation[]" required>
               <option value="">-- Select --</option>
-              <option>Spouse</option>
-              <option>Child</option>
-              <option>Parent</option>
+		<option>Aunt</option>
+		<option>Brother</option>
+		<option>Cousin</option>
+		<option>Daughter</option>
+		<option>Father</option>
+		<option>Father In Law</option>
+		<option>Granddaughter</option>
+		<option>Grandfather</option>
+		<option>Grandmother</option>
+		<option>Grandson</option>
+		<option>Mother</option>
+		<option>Mother In Law</option>
+		<option>Nephew</option>
+		<option>Niece</option>
+		<option>Sister</option>
+		<option>Son</option>
+		<option>Spouse</option>
+		<option>Uncle</option>		
               <option>Other</option>
             </select>
 
@@ -314,9 +693,24 @@
 	<label>Relationship *</label>
             <select name="emergencyRelation" required>
               <option value="">-- Select --</option>
-              <option>Spouse</option>
-              <option>Child</option>
-              <option>Parent</option>
+		<option>Aunt</option>
+		<option>Brother</option>
+		<option>Cousin</option>
+		<option>Daughter</option>
+		<option>Father</option>
+		<option>Father In Law</option>
+		<option>Granddaughter</option>
+		<option>Grandfather</option>
+		<option>Grandmother</option>
+		<option>Grandson</option>
+		<option>Mother</option>
+		<option>Mother In Law</option>
+		<option>Nephew</option>
+		<option>Niece</option>
+		<option>Sister</option>
+		<option>Son</option>
+		<option>Spouse</option>
+		<option>Uncle</option>
               <option>Other</option>
             </select>
 
@@ -393,6 +787,7 @@
           <option>Finance</option>
           <option>Marketing</option>
           <option>Operations</option>
+	  <option>Recruitment</option>
           <option>Other</option>
         </select>
 
