--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
 	<option>Vietnam</option>
 	<option>Yemen</option>
 	<option>Zimbabwe</option>
+	<option>Other</option>
           </select>
           <div id="citizenshipOtherDiv" style="display:none">
             <label>If Other, specify:</label>
