--- a/thank-you.html
+++ b/thank-you.html
@@ -1,23 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Thank You</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <style>
     body {
       text-align: center;
       padding: 50px;
       font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
     }
+
+    .logo {
+      max-width: 200px;
+      margin-bottom: 30px;
+    }
+
     h1 {
-      color: green;
+      color: #2e7d32;
+      font-size: 2.5rem;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+
+    a {
+      display: inline-block;
+      margin-top: 30px;
+      text-decoration: none;
+      color: white;
+      background-color: #1976d2;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    a:hover {
+      background-color: #125ea7;
     }
   </style>
 </head>
 <body>
-  <h1>✅ Thank you!</h1>
-  <p>Your form has been submitted successfully.</p>
-  <a href="index.html">← Back to Home</a> <!-- Or wherever your form is -->
+
+  <!-- Logo Section -->
+  <img src="logo.png" alt="Terrabit Consulting Logo" class="logo" />
+
+  <!-- Message -->
+  <h1>✅ Thank You!</h1>
+  <p>Your employment application has been submitted successfully.</p>
+
+  <!-- Back to Home -->
+  <a href="index.html">← Back to Form</a>
+
 </body>
 </html>
