--- a/thank-you.html
+++ b/thank-you.html
@@ -51,6 +51,8 @@
   <!-- Message -->
   <h1>✅ Thank You!</h1>
   <p>Your employment application has been submitted successfully.</p>
+  <p>A copy of your submitted data in Excel format has been sent to the email address you provided in the submitted form. Please check your inbox for reference.</p>
+
 
   <!-- Back to Home -->
   <a href="index.html">← Back to Form</a>
