--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           <input type="email" name="email2" required />
           <label>Mobile Number *</label>
 	  <input type="tel" name="mobile2" required pattern="[0-9]{10,15}" title="Please enter a valid mobile number (10–15 digits)" />
-         label>Tel (Home)</label>
+         <label>Tel (Home)</label>
         <input type="text" name="telHome" />
         <label>WhatsApp No</label>
         <input type="text" name="whatsappNo" />
